--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,10 @@
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/"
-        }
+        },
+        "files": [
+            "app/Http/helpers.php"
+        ]
     },
     "scripts": {
         "post-root-package-install": [
