--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "jquery": "^3.1.1",
     "laravel-mix": "^1.0",
     "lodash": "^4.17.4",
-    "vue": "^2.1.10"
+    "vue": "^2.1.10",
+    "select2": "^4.0.3"
   },
   "dependencies": {
     "codemirror": "^5.40.2",
